@@ -1,0 +1,2 @@
+Remove unnecessary get-orig-source-target.
+Fixed-Lintian-Tags: debian-rules-contains-unnecessary-get-orig-source-target
